public class BowAndArrowBehavior implements WeaponBevior {

    public void useWeapon(){
        System.out.println("I'm Bow and Arrow.");
    }
}
