public abstract class Character {

    WeaponBevior weapon;

    public abstract void fight();

    public void setWeapon(WeaponBevior w){
        weapon = w;
    }



}
