public class KnifeBehavior implements WeaponBevior {

    public void useWeapon(){
        System.out.println("i'm using KNIFE.");
    }
}
