@startuml

title __SRC's Class Diagram__\n

  package  {
    class AxeBevaior {
        + useWeapon()
    }
  }
  

  package  {
    class BowAndArrowBehavior {
        + useWeapon()
    }
  }
  

  package  {
    abstract class Character {
        {abstract} + fight()
        + setWeapon()
    }
  }
  

  package  {
    class FlyingAxe {
        + useWeapon()
    }
  }
  

  package  {
    class King {
        + King()
        + fight()
    }
  }
  

  package  {
    class KnifeBehavior {
        + useWeapon()
    }
  }
  

  package  {
    class Knight {
        + Knight()
        + fight()
    }
  }
  

  package  {
    class Program {
        {static} + main()
    }
  }
  

  package  {
    class Queen {
        + Queen()
        + fight()
    }
  }
  

  package  {
    class SwordBehavior {
        + useWeapon()
    }
  }
  

  package  {
    interface WeaponBevior {
        {abstract} + useWeapon()
    }
  }
  

  AxeBevaior -up-|> WeaponBevior
  BowAndArrowBehavior -up-|> WeaponBevior
  Character o-- WeaponBevior : weapon
  FlyingAxe -up-|> WeaponBevior
  King -up-|> Character
  KnifeBehavior -up-|> WeaponBevior
  Knight -up-|> Character
  Queen -up-|> Character
  SwordBehavior -up-|> WeaponBevior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
